--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,7 +1,7 @@
 .homePage-container {
   position: relative;
   z-index: 2;
-  margin-top: 13vh;
+  margin-top: 20vh;
 }
 
 .homePage {
